# LUNA_chatBot_p

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.deprecated.md  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  sessions.db
apps/chainlit/: app.py  chainlit.md
data/chroma_vectorstorage/: chroma.sqlite3
data/chroma_vectorstorage/56df208f-40b1-49f4-8bb2-9fc85848e7a2/: index_metadata.pickle
luna_assistant_backend/: .gcloudignore  .gitignore  chainlit.md  pyproject.toml
luna_assistant_backend/luna_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
luna_assistant_backend/src/app/: main.py
luna_assistant_backend/src/app/agents/: chat_agent.py
luna_assistant_backend/src/app/prompts/: provider.py  system.md
luna_assistant_backend/src/app/rag/: vector_store.py
luna_assistant_backend/src/app/services/: chat_service.py
luna_assistant_backend/src/app/tools/: rag_tools.py
luna_assistant_backend/src/luna_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
luna_assistant_backend/src/luna_chatbot/app/rag/: vector_store.py
luna_assistant_backend/src/luna_chatbot/app/utils/: type_helpers.py
luna_assistant_frontend/: README.md  pubspec.yaml
luna_assistant_frontend/android/app/: build.gradle.kts
luna_assistant_frontend/ios/Runner/: Info.plist
luna_assistant_frontend/ios/Runner.xcodeproj/: project.pbxproj
luna_assistant_frontend/lib/: main.dart
luna_assistant_frontend/linux/: CMakeLists.txt
luna_assistant_frontend/linux/runner/: my_application.cc
luna_assistant_frontend/macos/Runner.xcodeproj/: project.pbxproj
luna_assistant_frontend/macos/Runner/Configs/: AppInfo.xcconfig
luna_assistant_frontend/test/: widget_test.dart
luna_assistant_frontend/web/: index.html  manifest.json
luna_assistant_frontend/windows/: CMakeLists.txt
luna_assistant_frontend/windows/runner/: Runner.rc  main.cpp
prompts/: system.md
public/: stylesheet.css
requirements/: api.txt  constraints.txt  core.txt  ui.txt
src/app/: paths.py
src/app/chains/: doc_qa_chain.py  qa_chain.py
src/app/models/: __init__.py  open_ai_chat.py
src/app/prompts/: __init__.py  system.py
src/luna_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/luna_chatbot/app/agents/: agent.py  chat_agent.py
src/luna_chatbot/app/chains/: doc_qa_chain.py
(+22 files in other folders)
