[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-chatbot"
version = "0.1.1"  
description = "Chainlit Chat assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text="MIT"}
authors = [{name= "Jonas Besier", email = "jonas.besier.work@gmail.com"}]
dependencies = [
    "chainlit",
    "langchain==1.0.2",
    "langchain-openai",
    "pypdf",
    "langchain-community",
    "langchain-chroma",
    "langsmith"
]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.13.0", "mypy"]

[tool.chainlit]
watch = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["luna_chatbot*"]

[tool.setuptools.package-data]
luna_chatbot = ["app/prompts/*.md"]

[tool.setuptools]
include-package-data = true